--- a/app/views/public/companies/show.html.erb
+++ b/app/views/public/companies/show.html.erb
@@ -2,8 +2,8 @@
 
 <div class="wrap">
   <div class="company-content">
-    <div class="table-responsive">
-      <table class="table company-table">
+    <table class="table company-table">
+      <tbody>
         <tr>
           <th class="col-md-4">
             <div class="company-label">
@@ -20,15 +20,15 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>所在地</p>
+              所在地
             </div>
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p>
+              
                 〒553-0006<br>
                 大阪府大阪市福島区吉野３丁目８番３号
-              </p>
+              
             </div>
           </td>
         </tr>
@@ -36,12 +36,12 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>設立</p>
+              設立
             </div>
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p>2022年12月28日 株式会社LBrestaurant</p>
+              2022年12月28日 株式会社LBrestaurant
             </div>
           </td>
         </tr>
@@ -49,12 +49,12 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>電話番号</p>
+              電話番号
             </div>
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p>06-6459-7396</p>
+              06-6459-7396
             </div>
           </td>
         </tr>
@@ -62,12 +62,12 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>資本金</p>
+              資本金
             </div>
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p>500万</p>
+              500万
             </div>
           </td>
         </tr>
@@ -75,7 +75,7 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>役員</p>
+              役員
             </div>
           </th>
           <td class="col-md-8">
@@ -83,11 +83,11 @@
               <p class="me-5">
                 代表取締役<br>
                 川本哲也
-              </p>
-              <p>
+              
+              
                 取締役<br>
                 佐藤保
-              </p>
+              
             </div>
           </td>
         </tr>
@@ -95,12 +95,12 @@
         <tr>
           <th class="col-md-4">
             <div class="company-label">
-              <p>従業員数</p>
+              従業員数
             </div>
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p>30名(パート・アルバイト含む)</p>
+              30名(パート・アルバイト含む)
             </div>
           </td>
         </tr>
@@ -130,8 +130,8 @@
             </div>
           </td>
         </tr>
-      </table>
-    </div>
+      </tbody>
+    </table>
   </div>
 </div>
 
