--- a/app/views/public/job_entries/recruitment_info.html.erb
+++ b/app/views/public/job_entries/recruitment_info.html.erb
@@ -61,7 +61,7 @@
       調理も接客も、すべて入社後に学べます！気軽にエントリーしてください！
     </p>
     <%= form_with model: @job_entry, url: confirm_job_entries_url(@job_entry), local: true  do |f| %>
-      <div class="table-responsive">
+      <div>
         <table class="table job-entry-table">
           <tr>
             <th class="col-md-4">
