update/公開側でreactを使用すると、seo的側面からデメリットが多いため、railsで作成するように変更し、scssを利用して同じような機能を作成

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -23,9 +23,10 @@
 
   </head>
   <body>
+    <%= render 'public/shared/header' %>
     <div class="contents">
       <%= vite_javascript_tag 'PublicApplication.tsx' %>
-      <app-component data-props="<%= { ControllerName: controller_name, ActionName: action_name }.to_json %>">
+      <app-component>
         <%= yield %>
       </app-component>
     </div>
