--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -76,6 +76,66 @@ a:hover {
   }
 }
 
+.menu-item {
+  position: relative;
+  transition: background-color .3s;
+}
+
+.menu-item:hover .drop-menu-list {
+  transform: scaleY(1);
+  display: initial;
+}
+
+.menu-item:hover {
+  transition: background-color .3s;
+}
+
+.drop-menu-item:hover {
+  opacity: .8;
+  transition: opacity .3s;
+}
+
+
+.drop-menu {
+  position: relative;
+}
+
+.drop-menu-list {
+  right: -50%;
+  position: absolute;
+  top: 62px;
+  transform: scaleY(0);
+  transform-origin: center top;
+  transition: transform .3s;
+  width: max-content;
+  z-index: 1;
+}
+
+.drop-menu-list a {
+  text-align: center;
+  width: 160px
+}
+
+@media (max-width: 576px) {
+  .drop-menu-list a {
+    width: 100%
+  }
+}
+
+@media (max-width: 576px) {
+  .drop-menu-list {
+    position: static;
+    display: none;
+  }
+}
+
+
+.drop-menu-item {
+  background-color: white ;
+  transition: opacity .3s;
+}
+
+
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -1642,5 +1702,4 @@ a:hover {
 .scrolled-offset {
   margin-top: 70px;
 }
-
 
