update/公開側でreactを使用すると、seo的側面からデメリットが多いため、app-componentも利用しないように変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -25,10 +25,9 @@
   <body>
     <%= render 'public/shared/header' %>
     <div class="contents">
-      <%= vite_javascript_tag 'PublicApplication.tsx' %>
-      <app-component>
+      <main>
         <%= yield %>
-      </app-component>
+      <main>
     </div>
     <%= render 'public/shared/footer' %>
   </body>
