--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -92,10 +92,10 @@
                 </div>
               </th>
               <td class="col-md-8">
-                <contactmethod-component
+                <contact-component
                     data-props="<%= { contactMethodValuesCollect: Contact.contact_method.values, contactMethod: f.object.contact_method }.to_json %>"
                   >
-                  </contactmethod-component>
+                  </contact-component>
               </td>
             </tr>
 
