fix/reactを読み込むパスを失念しており、読み込めていなかったので記述してエラーを解決

--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -92,6 +92,7 @@
                 </div>
               </th>
               <td class="col-md-8">
+                <%= vite_javascript_tag 'Contact.tsx' %>
                 <contact-component
                     data-props="<%= { contactMethodValuesCollect: Contact.contact_method.values, contactMethod: f.object.contact_method }.to_json %>"
                   >
