update/公開側のヘッダーに新しく作成したlbrについてを表示し、scssを利用してレスポンシブなドロップダウンも作成

--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -111,6 +111,10 @@ a:hover {
   z-index: 1;
 }
 
+.drop-menu-list2 {
+  right: -25%;
+}
+
 .drop-menu-list a {
   text-align: center;
   width: 160px
