--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -7,10 +7,21 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    <div class="header-linklist collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="header-linklist collapse navbar-collapse active" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item active ms-5">
-          <%= link_to "Lbrについて", company_lbr_index_path, class: "nav-link fw-bold #{'active' if controller_name == 'lbr' && ['company'].include?(action_name)}" %>
+        <li class="recruit-drop nav-item drop-menu menu-item ms-5">
+          <%= link_to "Lbrについて", lbr_index_path, class: "nav-link fw-bold #{'active' if controller_name == 'lbr' && ['company'].include?(action_name)}" %>
+          <div class="drop-menu-list drop-menu-list2">
+            <div class="drop-menu-item nav-item">
+              <%= link_to "LBrの特徴!", about_lbr_index_path, class: "drop-top-line nav-link fw-bold" %>
+            </div>
+            <div class="drop-menu-item nav-item">
+              <%= link_to "スタッフについて", staff_lbr_index_path, class: "drop-top-line nav-link fw-bold" %>
+            </div>
+            <div class="drop-menu-item nav-item">
+              <%= link_to "会社概要", company_lbr_index_path, class: "drop-top-line drop-bottom-line nav-link fw-bold" %>
+            </div>
+          </div>
         </li>
         <li class="nav-item ms-5">
           <%= link_to "店舗情報", shops_path, class: "nav-link fw-bold #{'active' if controller_name == 'shops' && ['index'].include?(action_name)}" %>
@@ -31,7 +42,7 @@
               <%= link_to "よくある問い合わせ", faq_job_entries_path, class: "drop-top-line drop-bottom-line nav-link fw-bold" %>
             </div>
           </div>
-        </li>       
+        </li>
         <li class="nav-item ms-5">
           <%= link_to "問い合わせ", new_contact_path , class: "nav-link fw-bold #{'active' if controller_name == 'contacts' && ['new', 'confirm', 'complette'].include?(action_name)}" %>
         </li>
