update/公開側の企業概要画面のレイアウトを変更

--- a/app/views/public/lbr/company.html.erb
+++ b/app/views/public/lbr/company.html.erb
@@ -67,7 +67,7 @@
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              500万
+              500万円
             </div>
           </td>
         </tr>
@@ -80,14 +80,10 @@
           </th>
           <td class="col-md-8">
             <div class="company-form">
-              <p class="me-5">
-                代表取締役<br>
-                川本哲也
-              
-              
-                取締役<br>
-                佐藤保
-              
+              <p>
+                代表取締役:<span class="ms-3">川本哲也</span><br>
+                取締役:<span class="ms-3">佐藤保</span>
+              </p>
             </div>
           </td>
         </tr>
