update/スマホユーザーの多くはsafariを利用するため公開側のヘッダーのレイアウトをsafariのスマホサイズなどにも合わせて変更

--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -19,7 +19,7 @@
               <%= link_to "スタッフについて", staff_lbr_index_path, class: "drop-top-line nav-link fw-bold" %>
             </div>
             <div class="drop-menu-item nav-item">
-              <%= link_to "会社概要", company_lbr_index_path, class: "drop-top-line drop-bottom-line nav-link fw-bold" %>
+              <%= link_to "会社概要", company_lbr_index_path, class: "drop-top-line nav-link fw-bold" %>
             </div>
           </div>
         </li>
@@ -39,7 +39,7 @@
               <%= link_to "応募はこちら", recruitment_info_job_entries_path, class: "drop-top-line nav-link fw-bold" %>
             </div>
             <div class="drop-menu-item nav-item">
-              <%= link_to "よくある問い合わせ", faq_job_entries_path, class: "drop-top-line drop-bottom-line nav-link fw-bold" %>
+              <%= link_to "よくある問い合わせ", faq_job_entries_path, class: "drop-top-line nav-link fw-bold" %>
             </div>
           </div>
         </li>
