--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -76,70 +76,6 @@ a:hover {
   }
 }
 
-.menu-item {
-  position: relative;
-  transition: background-color .3s;
-}
-
-.menu-item:hover .drop-menu-list {
-  transform: scaleY(1);
-  display: initial;
-}
-
-.menu-item:hover {
-  transition: background-color .3s;
-}
-
-.drop-menu-item:hover {
-  opacity: .8;
-  transition: opacity .3s;
-}
-
-
-.drop-menu {
-  position: relative;
-}
-
-.drop-menu-list {
-  right: -50%;
-  position: absolute;
-  top: 62px;
-  transform: scaleY(0);
-  transform-origin: center top;
-  transition: transform .3s;
-  width: max-content;
-  z-index: 1;
-}
-
-.drop-menu-list2 {
-  right: -25%;
-}
-
-.drop-menu-list a {
-  text-align: center;
-  width: 160px
-}
-
-@media (max-width: 576px) {
-  .drop-menu-list a {
-    width: 100%
-  }
-}
-
-@media (max-width: 576px) {
-  .drop-menu-list {
-    position: static;
-    display: none;
-  }
-}
-
-
-.drop-menu-item {
-  background-color: white ;
-  transition: opacity .3s;
-}
-
-
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -284,25 +220,22 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 991px){
   .header-sm {
-    padding: 15px 10px;
+    padding: 15px 25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 991px){
   .header-linklist {
-    padding: 40px 0px;
+    padding: 20px 0 40px 0;
     background-color: #FAFAFA;
   }
 }
-
-@media screen and (max-width: 576px){
-  .navbar-brand-sm {
-    margin-right: 98px !important;
-  }
-}
-
 
 .logo {
   font-size: 28px;
@@ -314,6 +247,12 @@ a:hover {
 
 .scrolled-offset {
   margin-top: 70px;
+}
+
+@media (max-width: 1024px) {
+  .header-mobile-text {
+    font-size: 24px !important;
+  }
 }
 
 @media (max-width: 576px) {
@@ -329,6 +268,68 @@ a:hover {
   text-align: center;
 }
 
+.menu-item {
+  position: relative;
+  transition: background-color .3s;
+}
+
+.menu-item:hover .drop-menu-list {
+  transform: scaleY(1);
+  display: initial;
+}
+
+.menu-item:hover {
+  transition: background-color .3s;
+}
+
+.drop-menu-item:hover {
+  opacity: .8;
+  transition: opacity .3s;
+}
+
+
+.drop-menu {
+  position: relative;
+}
+
+.drop-menu-list {
+  right: -50%;
+  position: absolute;
+  top: 62px;
+  transform: scaleY(0);
+  transform-origin: center top;
+  transition: transform .3s;
+  width: max-content;
+  z-index: 1;
+}
+
+.drop-menu-list2 {
+  right: -25%;
+}
+
+.drop-menu-list a {
+  text-align: center;
+  width: 160px
+}
+
+@media (max-width: 991px) {
+  .drop-menu-list a {
+    width: 100%
+  }
+}
+
+@media (max-width: 991px) {
+  .drop-menu-list {
+    position: static;
+    display: none;
+  }
+}
+
+
+.drop-menu-item {
+  background-color: white ;
+  transition: opacity .3s;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -341,7 +342,7 @@ a:hover {
 
 
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 991px){
   .nav-list {
     display: block;
     position: absolute;
@@ -368,7 +369,7 @@ a:hover {
   position: relative;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 991px) {
   .navbar li {
     border-bottom: 1px solid black;
     width: 100%;
@@ -377,7 +378,7 @@ a:hover {
 }
 
 
-@media (max-width: 576px) {
+@media (max-width: 991px) {
   .nav-item {
     margin: 0 !important;
   }
