--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -21,7 +21,7 @@ em {
   justify-content: center;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 1320px) {
   .mobile-block {
     display: block !important;
   }
@@ -84,6 +84,18 @@ em {
 @media (max-width: 576px) {
   .mobile-p-0 {
     padding: 0 !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .mobile-full-width {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1085px) {
+  .mobile-btn-full-width {
+    width: 100%;
   }
 }
 
