--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -1,12 +1,14 @@
 <% breadcrumb :admins_news_index %>
-<div class="d-flex justify-content-between mb-4 mobile-block">
-  <h3 class="fw-bold"><%= link_to 'お知らせ一覧', admins_news_index_path, class: 'text-dark text-decoration-none' %></h3>
+<div class="d-flex justify-content-between mb-4 mobile-news-block">
+  <h3 class="fw-bold mobile-title"><%= link_to 'お知らせ一覧', admins_news_index_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_news_index_path, class: 'form-inline' do |f| %>
     <div class="input-group">
-      <%= f.select :search_by_status, News.status.options, { include_blank: '全ての公開状態' }, class: 'form-select-sm me-4' %>
-      <%= f.search_field @search_scope, class: 'form-control', placeholder: 'タイトルや内容で検索' %>
-      <div class="input-group-append">
-        <%= f.submit '検索', class: 'btn btn-primary' %>
+      <%= f.select :search_by_status, News.status.options, { include_blank: '全ての公開状態' }, class: 'form-select-sm news-search-select news-search-form-box' %>
+      <div class="mobile-news-full-width news-search-form">
+        <%= f.search_field @search_scope, class: 'form-control', placeholder: 'タイトルや内容で検索' %>
+      </div>
+      <div class="input-group-append mobile-news-btn-full-width">
+        <%= f.submit '検索', class: 'btn btn-primary mobile-news-btn-full-width' %>
       </div>
     </div>
   <% end %>
