--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -1,13 +1,15 @@
 <% breadcrumb :admins_articles %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
-  <h3 class="fw-bold"><%= link_to 'ブログ一覧', admins_articles_path, class: 'text-dark text-decoration-none' %></h3>
+  <h3 class="fw-bold mobile-title"><%= link_to 'ブログ一覧', admins_articles_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_articles_path, class: 'form-inline' do |f| %>
     <div class="input-group">
-      <%= f.select :search_by_status, Article.status.options, { include_blank: '全ての公開状態' }, class: 'form-select-sm me-4' %>
-      <%= f.select :search_by_category, Article.category.options, { include_blank: '全てのカテゴリー' }, class: 'form-select-sm me-4' %>
-      <%= f.search_field :title_cont, class: 'form-control', placeholder: 'タイトルで検索' %>
-      <div class="input-group-append">
-        <%= f.submit '検索', class: 'btn btn-primary' %>
+      <%= f.select :search_by_status, Article.status.options, { include_blank: '全ての公開状態' }, class: 'form-select-sm article-search-select article-search-form-box' %>
+      <%= f.select :search_by_category, Article.category.options, { include_blank: '全てのカテゴリー' }, class: 'form-select-sm article-search-select article-search-form-box' %>
+      <div class="mobile-article-full-width article-search-form">
+        <%= f.search_field :title_cont, class: 'form-control', placeholder: 'タイトルで検索' %>
+      </div>
+      <div class="input-group-append mobile-article-btn-full-width">
+        <%= f.submit '検索', class: 'btn btn-primary mobile-article-btn-full-width' %>
       </div>
     </div>
   <% end %>
