--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -1,8 +1,8 @@
 <% breadcrumb :admins_shops %>
-<div class="d-flex justify-content-between mb-4 mobile-block">
-  <h3 class="fw-bold"><%= link_to '店舗一覧', admins_shops_path, class: 'text-dark text-decoration-none' %></h3>
+<div class="d-flex justify-content-between mb-4 mobile-shop-block">
+  <h3 class="fw-bold mobile-title"><%= link_to '店舗一覧', admins_shops_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_shops_path, class: 'form-inline' do |f| %>
-    <div class="d-flex mobile-block">
+    <div class="d-flex  mobile-shop-block">
       <div class="input-group">
         <%= f.search_field :name_cont, class: 'form-control', placeholder: '店舗名で検索' %>
         <div class="input-group-append">
