--- a/app/views/admins/admin_users/index.html.erb
+++ b/app/views/admins/admin_users/index.html.erb
@@ -1,12 +1,14 @@
 <% breadcrumb :admins_admin_users %>
-<div class="d-flex justify-content-between mb-4 mobile-block">
-  <h3 class="fw-bold"><%= link_to '管理者一覧', admins_admin_users_path, class: 'text-dark text-decoration-none' %></h3>
+<div class="d-flex justify-content-between mb-4 mobile-admin-users-block">
+  <h3 class="fw-bold mobile-title"><%= link_to '管理者一覧', admins_admin_users_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_admin_users_path, class: 'form-inline' do |f| %>
     <div class="input-group">
-      <%= f.select :search_by_role, Admin.role.options, { include_blank: '全ての権限' }, class: 'form-select-sm me-4' %>
-      <%= f.search_field :name_cont, class: 'form-control', placeholder: '名前で検索' %>
-      <div class="input-group-append">
-        <%= f.submit '検索', class: 'btn btn-primary' %>
+      <%= f.select :search_by_role, Admin.role.options, { include_blank: '全ての権限' }, class: 'form-select-sm admin-user-search-select admin-user-search-form-box' %>
+      <div class="mobile-admin-user-full-width admin-user-search-form">
+        <%= f.search_field :name_cont, class: 'form-control', placeholder: '名前で検索' %>
+      </div>
+      <div class="input-group-append mobile-admin-user-btn-full-width">
+        <%= f.submit '検索', class: 'btn btn-primary mobile-admin-user-btn-full-width' %>
       </div>
     </div>
   <% end %>
