update/管理側のトップ画面など各種一覧画面を介して入力画面にいった際、一覧に戻るurlを詰めた変数がnullになり、一覧に戻れなかったため、修正

--- a/app/views/admins/articles/_form.html.erb
+++ b/app/views/admins/articles/_form.html.erb
@@ -37,14 +37,14 @@
   <div class="mt-5">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
-      <li class="list-inline-item"><%= link_to "ブログ一覧に戻る", @articles_index_url, class: 'btn btn-secondary' %></li>
+      <li class="list-inline-item"><%= link_to "ブログ一覧に戻る", @articles_index_url || admins_articles_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
   <div class="mt-5">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
-      <li class="list-inline-item"><%= link_to "ブログ一覧に戻る", @articles_index_url, class: 'btn btn-secondary' %></li>
+      <li class="list-inline-item"><%= link_to "ブログ一覧に戻る", @articles_index_url || admins_articles_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% end %>
