--- a/app/views/admins/admin_users/_form.html.erb
+++ b/app/views/admins/admin_users/_form.html.erb
@@ -41,14 +41,14 @@
   <div class="mt-5">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
-      <li class="list-inline-item"><%= link_to "管理ユーザー一覧に戻る", @admin_users_index_url, class: 'btn btn-secondary' %></li>
+      <li class="list-inline-item"><%= link_to "管理ユーザー一覧に戻る", @admin_users_index_url || admins_admin_users_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
   <div class="mt-5">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
-      <li class="list-inline-item"><%= link_to "管理ユーザー一覧に戻る", @admin_users_index_url, class: 'btn btn-secondary' %></li>
+      <li class="list-inline-item"><%= link_to "管理ユーザー一覧に戻る", @admin_users_index_url || admins_admin_users_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% end %>
