update/採用応募をした際にユーザー側に送るmailerのメールファイルの内容を変更

--- a/app/views/public_notification_mailer/job_entry_notification.html.erb
+++ b/app/views/public_notification_mailer/job_entry_notification.html.erb
@@ -15,9 +15,9 @@
 
     <hr>
     <p>株式会社LBrestaurant</p>
-    <p>住所：(大阪市福島区吉野3-8-3)</p>
-    <p>電話番号：(06-6459-7396)</p>
-    <p>メールアドレス：(kawamoto@lbrestaurant.net)</p>
+    <p>住所 : 大阪市福島区吉野3-8-3</p>
+    <p>電話番号 : 06-6459-7396</p>
+    <p>メールアドレス : kawamoto@lbrestaurant.net</p>
     <hr>
   </body>
 </html>
