--- a/app/views/public_notification_mailer/job_entry_notification.text.erb
+++ b/app/views/public_notification_mailer/job_entry_notification.text.erb
@@ -14,7 +14,7 @@
 ━━━━━━━━━━━━━━━━━━━━━━━━━
 株式会社LBrestaurant
 
-住所：(大阪市福島区吉野3-8-3)
-電話番号：(06-6459-7396)
-メールアドレス：(kawamoto@lbrestaurant.net)
+住所 : 大阪市福島区吉野3-8-3
+電話番号 : 06-6459-7396
+メールアドレス : kawamoto@lbrestaurant.net
 ━━━━━━━━━━━━━━━━━━━━━━━━━
