update/作業をしている間に誤って削除していたcssを記述

--- a/app/frontend/entrypoints/admins.scss
+++ b/app/frontend/entrypoints/admins.scss
@@ -156,6 +156,12 @@
   }
 }
 
+@media (max-width: 767px) {
+  .mobile-title {
+    margin-bottom: 1rem;
+  }
+}
+
 .article-wrap {
   padding: 0 80px;
 }
