update/公開側のトップ画面のABOUT-USコンテンツを作成

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -27,7 +27,7 @@
     <div class="contents">
       <main>
         <%= yield %>
-      <main>
+      </main>
     </div>
     <%= render 'public/shared/footer' %>
   </body>
