--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -20,7 +20,6 @@ html, body {
 body {
   font-family: 'Noto Sans JP', sans-serif;
   color: #2C2C2C;
-  background-image: url('/assets/background_image.jpg');
   margin: 0;
   padding: 0;
   height: 100%;
@@ -123,7 +122,7 @@ a:hover {
 }
 
 .contents {
-  padding-top: 120px;
+  padding-top: 100px;
   padding-bottom: 150px;
 }
 
@@ -210,7 +209,6 @@ a:hover {
   z-index: 997;
   background: #fff;
   padding: 23px 97px;
-  border-bottom: 1px solid #ddd;
   font-size: 18px;
   font-weight: 500;
   color: #4B4B4B;
@@ -585,61 +583,80 @@ a:hover {
 
 
 /*--------------------------------------------------------------
-# Breadcrumbs
+# Home
 --------------------------------------------------------------*/
-.breadcrumbs {
-  padding: 15px 0;
-  background: #2b2320;
-  min-height: 40px;
+.home-about-content {
+  width: 100%;
+  background-color: #FFF7E3;
+  height: 701px;
 }
 
-.breadcrumbs h2 {
-  font-size: 28px;
-  font-weight: 300;
-  color: #fff;
+.about-content {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding-top: 182px;
 }
 
-.breadcrumbs ol {
+.about-flex {
   display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  color: #ded5d2;
 }
 
-.breadcrumbs ol a {
-  color: #fe825a;
+.about-title {
+  font-size: 40px;
+  font-weight: 900;
+  color: #D32600;
+  transform: skew(-10deg);
+  margin-bottom: 20px;
 }
 
-.breadcrumbs ol li+li {
-  padding-left: 10px;
+.about-text {
+  font-size: 18px;
+  font-weight: 500;
+  color: #4B4B4B;
+  line-height: 30px;
+  margin-bottom: 50px;
 }
 
-.breadcrumbs ol li+li::before {
-  display: inline-block;
-  padding-right: 10px;
-  color: #c8bab5;
-  content: "/";
+.about-img {
+  margin-left: 30px;
 }
 
-@media (max-width: 768px) {
-  .breadcrumbs .d-flex {
-    display: block !important;
+.about-btn {
+  width: 280px;
+  height: 60px;
+  background-color: #D32600;
+  font-size: 18px;
+  font-weight: 900;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-link {
+  .btn {
+    padding: 0px !important;
   }
 
-  .breadcrumbs ol {
-    display: block;
+  .btn:hover {
+    color: initial !important;
+    background-color: initial !important;
+    border-color: initial !important;
   }
 
-  .breadcrumbs ol li {
-    display: inline-block;
+  a:hover {
+    color: initial !important;
+    text-decoration: none !important;
+  }
+
+  a:hover {
+    --bs-link-color-rgb: initial !important;
   }
 }
 
-/*--------------------------------------------------------------
-# Cta
---------------------------------------------------------------*/
+
+
+
 .company-title {
   margin-bottom: 3rem;
   margin-top: 3rem;
