update/imageディレクトリにそれぞれ細かいディレクトリを作成し可読性が上がるように設定

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag('top.png', width: "100%") %>
+<%= image_tag('home/top.png', width: "100%") %>
 <div class="home-about-content">
   <div class="about-content">
     <div class="about-flex">
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="about-img">
-        <%= image_tag('about_us.png') %>
+        <%= image_tag('home/about_us.png') %>
       </div>
     </div>
   </div>
