clean/公開側のトップページのabout-usコンテンツのcssのクラス名などを管理しやすいように変更

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -1,18 +1,18 @@
 <%= image_tag('home/top.png', width: "100%") %>
-<div class="home-about-content">
-  <div class="about-content">
-    <div class="about-flex">
+<div class="home-about-us-wrap">
+  <div class="home-content-box about-us-content">
+    <div class="about-us-flex">
       <div>
-        <h3 class="about-title">ABOUT US</h3>
-        <p class="about-text">社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
+        <h3 class="about-us-title">ABOUT US</h3>
+        <p class="about-us-text">社名のLBrestaurantとは地域密着の飲食店という意味です。その名の通り、地域になくてはならないと思っていただける飲食店を作ることが理念です。<br>
         そして、その過程や結果により全従業員が少しでも豊かな人生を物心両面で歩めることを最大の目的としています。<br>
         全従業員が豊かになれるよう、さまざまな取り組みをしています。
         </p>
-        <div class="about-link">
+        <div class="about-us-link">
           <%= link_to 'LBrestaurantの特徴', '/path/to/destination', class: 'btn about-btn' %>
         </div>
       </div>
-      <div class="about-img">
+      <div class="about-us-img">
         <%= image_tag('home/about_us.png') %>
       </div>
     </div>
