--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -585,23 +585,27 @@ a:hover {
 /*--------------------------------------------------------------
 # Home
 --------------------------------------------------------------*/
-.home-about-content {
+.home-about-us-wrap {
   width: 100%;
   background-color: #FFF7E3;
   height: 701px;
 }
 
-.about-content {
+.home-content-box {
   max-width: 1080px;
   margin: 0 auto;
+  
+}
+
+.about-us-content {
   padding-top: 182px;
 }
 
-.about-flex {
+.about-us-flex {
   display: flex;
 }
 
-.about-title {
+.about-us-title {
   font-size: 40px;
   font-weight: 900;
   color: #D32600;
@@ -609,7 +613,7 @@ a:hover {
   margin-bottom: 20px;
 }
 
-.about-text {
+.about-us-text {
   font-size: 18px;
   font-weight: 500;
   color: #4B4B4B;
@@ -617,11 +621,11 @@ a:hover {
   margin-bottom: 50px;
 }
 
-.about-img {
+.about-us-img {
   margin-left: 30px;
 }
 
-.about-btn {
+.about-us-btn {
   width: 280px;
   height: 60px;
   background-color: #D32600;
@@ -633,7 +637,7 @@ a:hover {
   align-items: center;
 }
 
-.about-link {
+.about-us-link {
   .btn {
     padding: 0px !important;
   }
