--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -585,6 +585,8 @@ a:hover {
 /*--------------------------------------------------------------
 # Home
 --------------------------------------------------------------*/
+// about-us
+
 .home-about-us-wrap {
   width: 100%;
   background-color: #FFF7E3;
@@ -594,7 +596,6 @@ a:hover {
 .home-content-box {
   max-width: 1080px;
   margin: 0 auto;
-  
 }
 
 .about-us-content {
@@ -625,7 +626,8 @@ a:hover {
   margin-left: 30px;
 }
 
-.about-us-btn {
+.about-us-btn,
+.restaurant-btn {
   width: 280px;
   height: 60px;
   background-color: #D32600;
@@ -635,9 +637,11 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
-.about-us-link {
+.about-us-link,
+.restaurant-link {
   .btn {
     padding: 0px !important;
   }
@@ -656,6 +660,59 @@ a:hover {
   a:hover {
     --bs-link-color-rgb: initial !important;
   }
+}
+
+.about-us-btn::after,
+.restaurant-btn::after {
+  content: ">";
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
+// shop
+.home-restaurant-wrap {
+  width: 100%;
+  background-size: 100% auto;
+  background-image: url('/assets/home/shop.png');
+  height: 550px;
+  padding: 70px 0;
+}
+
+.restaurant-content {
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  height: 400px;
+}
+
+.restaurant-title {
+  font-size: 40px;
+  font-weight: 900;
+  color: #D32600;
+  transform: skew(-10deg);
+  text-align: center;
+  padding-top: 50px;
+}
+
+.restaurant-sub-title {
+  font-size: 24px;
+  font-weight: 900;
+  color: #2C2C2C;
+  text-align: center;
+  padding-top: 35px;
+}
+
+.restaurant-text {
+  font-size: 16px;
+  font-weight: 500;
+  color: #2C2C2C;
+  line-height: 30px;
+  padding: 20px 100px;
+}
+
+.restaurant-link:nth-child(2) {
+  padding-left: 50px; 
 }
 
 
