--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -606,7 +606,9 @@ a:hover {
   }
 }
 
-.home .btn::after {
+.home-about-us-wrap .btn::after,
+.home-restaurant-wrap .btn::after,
+.home-carrer-wrap .btn::after {
   content: ">";
   position: absolute;
   top: 50%;
@@ -757,6 +759,91 @@ a:hover {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+
+// ニュース
+
+.home-news-wrap {
+  width: 100%;
+  background-color: #FFF7E3;
+  height: 760px;
+}
+
+.home-news-title {
+  font-size: 40px;
+  font-weight: 900;
+  color: #D32600;
+  transform: skew(-10deg);
+  text-align: center;
+  padding: 90px 0 40px;
+}
+
+.news-btn,
+.article-btn {
+  width: 320px;
+  height: 80px;
+  background-color: #D9D9D9;
+  font-size: 18px;
+  font-weight: 900;
+  color: #2C2C2C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.news-btn:after,
+.article-btn:after {
+  content: "";
+  position: absolute;
+  bottom: -17px;
+  left: calc(50% - 17px);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 17px 17px 0 17px;
+  border-color: #D32600 transparent transparent transparent;
+  display: none;
+}
+
+.article-btn.active:after {
+  display: block;
+}
+
+.news-btn.active:after {
+  display: block;
+}
+
+
+.home-news-content {
+  background-color: #FFFFFF;;
+  border-radius: 10px;
+  height: 260px;
+  border: 6px solid #E2E2E2;
+  padding: 45px;
+  margin-top: 30px;
+}
+
+.home-news-textbox,
+.home-article-textbox {
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.home-news-textbox:nth-of-type(-n+4),
+.home-article-textbox:nth-of-type(-n+4) {
+  padding-bottom: 15px;
+}
+
+.home-news-textbox a,
+.home-article-textbox a {
+  color: #2C2C2C;
+  text-decoration: none;
+}
+
+.home-news-calender-date {
+  padding-right: 15px;
 }
 
 .company-title {
